src/AllComponent/CSSFile/YourCourses.css
.Add-main-cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  row-gap: 10px;
  margin: 25px 0px;
  justify-items: center;
  }
  .cardImage{
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
    height: 27vh;
    width: 100%;
  }
 
  
  .card {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    border-radius: 15px;
    background-color: white;
    color: black;
    padding-bottom: 0;
    width: 100%;
    box-shadow: 2px 2px 2px 0.5px #ededed;
    margin-bottom: 25px;
    /* padding-bottom: 5%; */
  }
  .AddCourses{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 20px;
  }
  .FolderImg{
    width: 50% !important;
  }
  .AddBtn{
    font-size: 1rem;
    border-radius: 15px !important;
  }
  .CardData{
    margin-left: 12px;
    text-align: left;
    cursor: pointer;
    margin-top: 18px;
   width:80%;
  }
  .Namep{
    color: grey;
    font-size: 0.9rem;
  }
  .Yearp{ 
    margin-top: -8px ;
    padding: 0px;
    text-align: center;
    font-size: 0.rem;
    width: 30%;
    color: #00BFFF;
    background-color: rgb(205 237 237 / 72%);
    border-radius: 5px;
    margin-bottom: 33px;
  }

  @media screen and (max-width: 1280px) {
    .cardImage{
       height: auto;
     }
    
  }
  @media screen and (max-width: 962px) {
    .Add-main-cards {
        grid-template-columns: 1fr 1fr ;
      }
  }
  @media screen and (max-width: 562px) {
    .Add-main-cards {
        grid-template-columns: 1fr;
      }
  }
  
  .Pricep{
    margin-top: 5% !important;
  }
  .publish{ 
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 4px 2px;
    width: 60%;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    font-size: 0.9rem;
    color: rgb(255, 255, 255);
    position: absolute;
    background-color: green;
    opacity: 0.8;
    justify-content: center;
    height: 2.5vh;
    margin-top: 28px;
  }
  .Npublish{ 
   
    background-color: rgb(255, 2, 2);
    
  }
  .publishBox{
    position: relative;
    text-align: center;
    
  }
  .starIcon{
    margin-left: 2% !important; 
    width: 20% !important;
    height: 3vh !important;
    margin-top: -3% !important;
  }

